test/expected/explain_ll-knr.out
explain long long x
        ^
9: error: "long long" is illegal for built-in type until C99
